fixed some errors on small screens

--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,7 @@ body {
     background-color: #1059cf;
     color: #E1E8ED;
     font-family: "Sono", sans-serif;
-    padding: 48px 64px 0px;
+    padding: 20px 64px 0px;
 }
 
 /* MAIN LAYOUT */
@@ -34,7 +34,7 @@ body {
     display: grid;
     grid-template-columns: 250px 1fr;
     gap: 40px;
-    height: calc(100vh - 48px - 68px - 40px);
+    height: calc(100vh - 20px - 68px - 40px);
 }
 
 section {
@@ -163,16 +163,11 @@ label {
     font-weight: 600;
 }
 
-.user {
-    font-size: 20px;
-    background-color: #876226;
-
-}
-
 .prayer-tags {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
+    font-size: 90px;
     width: 100%;
     align-self: self-end;
     gap: 5px;
@@ -248,7 +243,7 @@ button:hover {
 
 .vote-buttons button {
     border: none;
-    background-color: #4e4b49;
+    background-color: #232631;
     padding: 6px 12px;
     border-radius: 100px;
     color: inherit;
@@ -262,7 +257,7 @@ button:hover {
 }
 
 .vote-buttons button:disabled {
-    background-color: #4e4b49;
+    background-color: #232631;
     transition: 0.1s;
 }
 
@@ -273,7 +268,7 @@ ul {
 /* FOOTER */
 .pop-up {
     display: flex;
-    align-items: start;
+    align-items: center;
     flex-shrink: 0;
     gap: 10px;
     width: 100%;
